🚧 Switch to expectation maximization

--- a/experiments/gmm/train.ipynb
+++ b/experiments/gmm/train.ipynb
@@ -13,7 +13,6 @@
     "import optax\n",
     "\n",
     "from inox.random import PRNG\n",
-    "from tqdm import trange\n",
     "from typing import *\n",
     "\n",
     "from utils import *"
@@ -71,22 +70,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mu_x, sigma_x, _ = fit_moments(\n",
+    "    features=5,\n",
+    "    rank=3,\n",
+    "    A=inox.Partial(measure, A),\n",
+    "    y=y,\n",
+    "    sigma_y=1e-3 ** 2,\n",
+    "    key=rng.split(),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def sample(model, A, y):\n",
+    "    if isinstance(model, GaussianDenoiser):\n",
+    "        sigma_x = model.sigma_x\n",
+    "    else:\n",
+    "        sigma_x = None\n",
+    "\n",
     "    sampler = DDPM(\n",
     "        PosteriorDenoiser(\n",
     "            model=model,\n",
     "            A=inox.Partial(measure, A),\n",
     "            y=y,\n",
     "            sigma_y=1e-3 ** 2,\n",
+    "            sigma_x=sigma_x,\n",
     "        ),\n",
     "    )\n",
     "\n",
     "    z = rng.normal((len(y), 5))\n",
-    "    x = sampler(z, steps=64, key=rng.split())\n",
+    "    x = z * sampler.sde.sigma(1.0)\n",
+    "\n",
+    "    x = sampler(x, steps=64, key=rng.split())\n",
     "\n",
     "    return x\n",
     "\n",
-    "x_bis = sample(GaussianDenoiser(), A, y)\n",
+    "x_bis = sample(GaussianDenoiser(mu_x, sigma_x), A, y)\n",
     "show(x_bis)"
    ]
   },
@@ -115,28 +138,25 @@
     "\n",
     "    objective = DenoiserLoss()\n",
     "\n",
-    "    def ell(params, others, x, A, y, key):\n",
+    "    def ell(params, others, x, key):\n",
     "        keys = jax.random.split(key, 2)\n",
     "\n",
     "        z = jax.random.normal(keys[0], shape=x.shape)\n",
-    "        t = jax.random.beta(keys[1], a=3, b=3, shape=x.shape[:1])\n",
+    "        t = jax.random.beta(keys[1], a=3, b=5, shape=x.shape[:1])\n",
     "\n",
-    "        return objective(static(params, others), x, z, t, A=inox.Partial(measure, A), y=y)\n",
+    "        return objective(static(params, others), x, z, t)\n",
     "\n",
     "    @jax.jit\n",
-    "    def sgd_step(params, others, opt_state, x, A, y, key):\n",
-    "        loss, grads = jax.value_and_grad(ell)(params, others, x, A, y, key)\n",
+    "    def sgd_step(params, others, opt_state, x, key):\n",
+    "        loss, grads = jax.value_and_grad(ell)(params, others, x, key)\n",
     "        updates, opt_state = optimizer.update(grads, opt_state, params)\n",
     "        params = optax.apply_updates(params, updates)\n",
     "\n",
     "        return loss, params, opt_state\n",
     "\n",
-    "    for step in (bar := trange(steps)):\n",
+    "    for step in range(steps):\n",
     "        i = rng.randint(shape=(1024,), minval=0, maxval=len(y))\n",
-    "\n",
-    "        loss, params, opt_state = sgd_step(params, others, opt_state, x[i], A[i], y[i], rng.split())\n",
-    "\n",
-    "        bar.set_postfix(loss=float(loss))\n",
+    "        loss, params, opt_state = sgd_step(params, others, opt_state, x[i], rng.split())\n",
     "\n",
     "    return static(params, others)"
    ]
