--- a/experiments/gmm/train.ipynb
+++ b/experiments/gmm/train.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = PRNG(0)"
+    "rng = PRNG(1)"
    ]
   },
   {
@@ -40,28 +40,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modes = rng.uniform((8, 5), minval=-2.0, maxval=2.0)\n",
-    "\n",
-    "i = rng.randint((65536,), minval=0, maxval=len(modes))\n",
-    "x = rng.normal((65536, 5)) / 8\n",
-    "x = modes[i] + x\n",
-    "\n",
+    "x, A, y = make_data(65536, key=rng.split())\n",
     "show(x)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def measure(A, x):\n",
-    "    return jnp.einsum('...ij,...j->...i', A, x)\n",
-    "\n",
-    "A = rng.normal((65536, 2, 5))\n",
-    "A = A / jnp.linalg.norm(A, axis=-1, keepdims=True)\n",
-    "\n",
-    "y = measure(A, x) + 1e-3 * rng.normal((65536, 2))"
+    "## Fit"
    ]
   },
   {
@@ -86,29 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sample(model, A, y):\n",
-    "    if isinstance(model, GaussianDenoiser):\n",
-    "        sigma_x = model.sigma_x\n",
-    "    else:\n",
-    "        sigma_x = None\n",
-    "\n",
-    "    sampler = DDPM(\n",
-    "        PosteriorDenoiser(\n",
-    "            model=model,\n",
-    "            A=inox.Partial(measure, A),\n",
-    "            y=y,\n",
-    "            sigma_y=1e-3 ** 2,\n",
-    "            sigma_x=sigma_x,\n",
-    "        ),\n",
-    "    )\n",
-    "\n",
-    "    z = rng.normal((len(y), 5))\n",
-    "    x = z * sampler.sde.sigma(1.0)\n",
-    "    x = sampler(x, steps=64, key=rng.split())\n",
-    "\n",
-    "    return x\n",
-    "\n",
-    "x_bis = sample(GaussianDenoiser(mu_x, sigma_x), A, y)\n",
+    "x_bis = sample(GaussianDenoiser(mu_x, sigma_x), A, y, rng.split())\n",
     "show(x_bis)"
    ]
   },
@@ -167,7 +132,7 @@
    "outputs": [],
    "source": [
     "model = train(x_bis)\n",
-    "x_bis = sample(model, A, y)\n",
+    "x_bis = sample(model, A, y, rng.split())\n",
     "show(x_bis)"
    ]
   },
@@ -178,7 +143,7 @@
    "outputs": [],
    "source": [
     "model = train(x_bis)\n",
-    "x_bis = sample(model, A, y)\n",
+    "x_bis = sample(model, A, y, rng.split())\n",
     "show(x_bis)"
    ]
   },
@@ -189,7 +154,7 @@
    "outputs": [],
    "source": [
     "model = train(x_bis)\n",
-    "x_bis = sample(model, A, y)\n",
+    "x_bis = sample(model, A, y, rng.split())\n",
     "show(x_bis)"
    ]
   },
@@ -200,7 +165,7 @@
    "outputs": [],
    "source": [
     "model = train(x_bis)\n",
-    "x_bis = sample(model, A, y)\n",
+    "x_bis = sample(model, A, y, rng.split())\n",
     "show(x_bis)"
    ]
   },
@@ -210,8 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampler = DDPM(model)\n",
-    "x_ter = sampler(rng.normal(x.shape), steps=64, key=rng.split())\n",
+    "x_ter = sample_any(model, shape=(65535, 5), key=rng.split())\n",
     "show(x_ter)"
    ]
   }
