🚧 Fit data moments by expectation maximization

--- a/experiments/gmm/train.ipynb
+++ b/experiments/gmm/train.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu_x, sigma_x, _ = fit_moments(\n",
+    "mu_x, sigma_x = fit_moments(\n",
     "    features=5,\n",
     "    rank=3,\n",
     "    A=inox.Partial(measure, A),\n",
@@ -104,7 +104,6 @@
     "\n",
     "    z = rng.normal((len(y), 5))\n",
     "    x = z * sampler.sde.sigma(1.0)\n",
-    "\n",
     "    x = sampler(x, steps=64, key=rng.split())\n",
     "\n",
     "    return x\n",
