⚗️ Try all heuristics

--- a/experiments/manifold/stats.ipynb
+++ b/experiments/manifold/stats.ipynb
@@ -377,7 +377,7 @@
     "    data,\n",
     "    x='sigma',\n",
     "    y='divergence',\n",
-    "    hue='method',\n",
+    "    hue='heuristic',\n",
     "    estimator='median',\n",
     "    errorbar=('pi', 50),\n",
     "    err_kws={'linewidth': 0},\n",
