⚗️ Try less corruption

--- a/experiments/cifar/figures.ipynb
+++ b/experiments/cifar/figures.ipynb
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "dataset = load_from_disk(PATH / 'hf/cifar-mask')\n",
+    "dataset = load_from_disk(PATH / 'hf/cifar-mask-75')\n",
     "dataset.set_format('numpy')\n",
     "\n",
     "testset_yA = dataset['test']\n",
