--- a/experiments/manifold/coil.ipynb
+++ b/experiments/manifold/coil.ipynb
@@ -78,7 +78,7 @@
     "def A(x):\n",
     "    return jnp.einsum('...ij,...j', W, x)\n",
     "\n",
-    "sigma_y = 1e-2 ** 2 * jnp.eye(1)\n",
+    "cov_y = 1e-2 ** 2 * jnp.eye(1)\n",
     "\n",
     "y = jnp.array([0.0])"
    ]
@@ -99,7 +99,7 @@
     "\n",
     "def posterior(n):\n",
     "    p_x = prior(n)\n",
-    "    log_p_y_x = jax.scipy.stats.multivariate_normal.logpdf(y, A(p_x), sigma_y)\n",
+    "    log_p_y_x = jax.scipy.stats.multivariate_normal.logpdf(y, A(p_x), cov_y)\n",
     "    p_x_y = rng.choice(p_x, (n,), p=jnp.exp(log_p_y_x))\n",
     "\n",
     "    return p_x_y"
@@ -123,7 +123,7 @@
    ],
    "source": [
     "p_x = prior(65536)\n",
-    "sigma_x = jnp.cov(p_x.T)\n",
+    "cov_x = jnp.cov(p_x.T)\n",
     "fig = show_corner(p_x, height=1.6)"
    ]
   },
@@ -195,17 +195,17 @@
     "\n",
     "        if method == 'zero':\n",
     "            V_x_xt = 0.0 * jnp.eye(3)\n",
-    "        elif method == 'sigma_t':\n",
+    "        elif method == 'cov_t':\n",
     "            V_x_xt = sigma_t**2 * jnp.eye(3)\n",
     "        else:\n",
-    "            if method == 'sigma_x':\n",
-    "                H = -jnp.linalg.inv(sigma_x + sigma_t**2 * jnp.eye(3))\n",
+    "            if method == 'cov_x':\n",
+    "                H = -jnp.linalg.inv(cov_x + sigma_t**2 * jnp.eye(3))\n",
     "            elif method == 'hessian':\n",
     "                H = jnp.vectorize(jax.hessian(log_prior), signature='(n),()->(n,n)')(xt, sigma_t)\n",
     "\n",
     "            V_x_xt = sigma_t**2 * jnp.eye(3) + sigma_t ** 4 * H\n",
     "\n",
-    "        V_y_xt = sigma_y + A(A(V_x_xt).mT)\n",
+    "        V_y_xt = cov_y + A(A(V_x_xt).mT)\n",
     "\n",
     "        return jax.scipy.stats.multivariate_normal.logpdf(y, E_y_xt, V_y_xt)\n",
     "\n",
@@ -279,7 +279,7 @@
     }
    ],
    "source": [
-    "q_xt_y = approx_posterior(65536, sigma_t=0.25, method='sigma_t')\n",
+    "q_xt_y = approx_posterior(65536, sigma_t=0.25, method='cov_t')\n",
     "fig = show_corner(q_xt_y, height=1.6)"
    ]
   },
@@ -300,7 +300,7 @@
     }
    ],
    "source": [
-    "q_xt_y = approx_posterior(65536, sigma_t=0.25, method='sigma_x')\n",
+    "q_xt_y = approx_posterior(65536, sigma_t=0.25, method='cov_x')\n",
     "fig = show_corner(q_xt_y, height=1.6)"
    ]
   }
